# phenoscale-pilot

./: .gitignore  0.0-read_kmz.py  0.1-metadata.py  1.0-inference.py  2.0-read_results.py  3.0-plot_cumspecies.py  3.0-plot_networks.py  LICENSE  README.md  pyproject.toml  requirements.txt
metadata/: OrganicMapsBackup_240821.kmz  fileindex.json  pilot_metadata.csv  wytham_pilot_points.csv
src/: plot.py
