[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
description = "A library for managing and analysing animal vocalisation data."
version = "0.1.7"
authors = [{ name = "Nilo M. Recalde", email = "nilomerinorecalde@gmail.com" }]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib-label-lines",
]

[project.optional-dependencies]
dev = ["ipywidgets", "ipykernel", "pytest", "nox", "black"]
test = ["pytest >=7"]
doc = [
    "sphinx <5, >=3.5.4",
    "sphinx-copybutton",
    "sphinx_book_theme == 0.3.3",
    "myst-nb ==  0.17",
    "myst-parser == 0.18",
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
float_to_top = 'True'